  * Fix conditional interpretation of core options
  * proxy-backend-http: fix chunked encoding parser
  * more strict check for server.stat-cache-engine
  * Read hostname from absolute https:// uris in the request line (patch by Adrian Schröter <adrian@suse.de>)
  * [ssl/md5] prefix our own md5 implementation with li_ so it doesn't conflict with the openssl one (fixes #2269)
  * Enable linux-aio-sendfile for testing in autotools too
  * [mod_auth] Fix signedness error in http_auth (fixes #2370, CVE-2011-4362)

- 1.5.0-r19.. -
  * -F option added for spawn-fcgi
  * replaced mod_fastcgi, mod_scgi, mod_proxy with mod_proxy_core + backends
  * added query-string parsing for mod_uploadprogress
  * added threaded stat()
  * added threaded disk-read() support
  * added dir-listing.set-footer in mod_dirlisting (#1277)
  * added logging of the PID and UID of the sending process for SIGTERM and SIGINT
  * added support for AJP13 to mod_proxy_core
  * fixed the out-of-fd support
  * fixed crash in mod_expire if 'modification' is used and stat() failed (#1063)
  * fixed hardcoded font-sizes in mod_dirlisting (#1267)
  * fixed different ETag length on 32/64 platforms (#1279)
  * fixed conditional dir-listing.exclude (#930)
  * fixed CONTENT_LENGTH = -1 in mod_cgi (#1276)
  * fixed typecast of NULL on execl() (#1235)
  * fixed extra Content-Length header on 1xx, 204 and 304 (#1002)
  * fixed mysql server reconnects (#518)
  * fixed prctl() usage (#1310, #1333)
  * fixed FastCGI header overrun in mod_fastcgi (reported by mattias@secweb.se)
  * fixed mem-leak in mod_auth (reported by Stefan Esser)
  * fixed crash with md5-sess and cnonce not set in mod_auth (reported by Stefan Esser)
  * fixed missing check for base64 encoded string in mod_auth and Basic auth
    (reported by Stefan Esser)
  * fixed possible crash in Auth-Digest header parser on trailing WS in
    mod_auth (reported by Stefan Esser)