@@ -171,6 +171,7 @@ NEWS
   * [ssl/md5] prefix our own md5 implementation with li_ so it doesn't conflict with the openssl one (fixes #2269)
   * Enable linux-aio-sendfile for testing in autotools too
   * [mod_auth] Fix signedness error in http_auth (fixes #2370, CVE-2011-4362)
+  * buffer_caseless_compare: always convert letters to lowercase to get transitive results, fixing array lookups (fixes #2405)
 
 - 1.5.0-r19.. -
   * -F option added for spawn-fcgi
